--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ h1 {
     font-weight: 1000;
     margin: 0;
     color: #e66465;
+    padding-top: 25px;
 }
 
 h2 {
@@ -35,7 +36,7 @@ h3 {
 
 #drumpads {
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: wrap-reverse;
     justify-content: space-evenly;
     max-width: 100%;
     max-height: 100%;
@@ -53,5 +54,7 @@ h3 {
     border-radius: 15%;
     border: 10px;
     background: radial-gradient(#e66465, #2132e4);
+    user-select: none;
+    cursor: pointer;
 }
 
